--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -13,8 +13,8 @@
         android:layout_marginTop="104dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_user_avatar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -23,8 +23,8 @@
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imgUser"
-        app:layout_constraintEnd_toEndOf="@+id/imgUser"
-        app:srcCompat="@drawable/ic_round_add_circle_outline_24" />
+        app:layout_constraintRight_toRightOf="@+id/imgUser"
+        app:srcCompat="@drawable/add_circle_24" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
@@ -34,8 +34,8 @@
         android:layout_marginTop="40dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgUser">
 
         <EditText
@@ -56,8 +56,8 @@
         android:layout_marginTop="12dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <EditText
