--- a/app/src/main/res/layout/row_assignment.xml
+++ b/app/src/main/res/layout/row_assignment.xml
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgUser"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/ic_user_avatar" />
 
@@ -31,7 +31,7 @@
             android:textColor="@color/colorText"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/imgUser"
+            app:layout_constraintLeft_toRightOf="@+id/imgUser"
             app:layout_constraintTop_toTopOf="@+id/imgUser"
             tools:text="aaaaa" />
 
@@ -45,7 +45,7 @@
             android:includeFontPadding="false"
             android:textColor="@color/colorText"
             android:textSize="17sp"
-            app:layout_constraintStart_toEndOf="@+id/imgUser"
+            app:layout_constraintLeft_toRightOf="@+id/imgUser"
             app:layout_constraintTop_toBottomOf="@+id/tvUserName"
             tools:text="aaaaa" />
 
@@ -53,14 +53,13 @@
             android:id="@+id/tvText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="10dp"
             android:fontFamily="@font/ubuntu"
             android:includeFontPadding="false"
             android:textColor="@color/colorText"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/imgUser"
+            android:layout_marginTop="15dp"
+            app:layout_constraintLeft_toLeftOf="@+id/imgUser"
+            app:layout_constraintRight_toRightOf="@+id/btnAttach"
             app:layout_constraintTop_toBottomOf="@+id/imgUser"
             tools:text="aaaaa" />
 
@@ -73,7 +72,7 @@
             android:layout_marginBottom="15dp"
             android:text="Attach"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvText" />
 
         <TextView
@@ -83,11 +82,12 @@
             android:fontFamily="@font/ubuntu"
             android:includeFontPadding="false"
             tools:text="@string/app_name"
+            android:layout_marginRight="15dp"
             android:textColor="@color/colorText"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/btnAttach"
-            app:layout_constraintEnd_toStartOf="@+id/btnAttach"
-            app:layout_constraintStart_toStartOf="@+id/tvText"
+            app:layout_constraintRight_toLeftOf="@+id/btnAttach"
+            app:layout_constraintLeft_toLeftOf="@+id/tvText"
             app:layout_constraintTop_toTopOf="@+id/btnAttach" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
